# aya-node

./: .gitignore  Cargo.toml  addresses.json  diff.txt
docs/: CrosschainBlocktimeAndReorgAnalysis.aux  CrosschainBlocktimeAndReorgAnalysis.tex  anomaly_detection.txt  arch.aux  arch.out  arch.tex  arch.toc  aya-node.docx  bad_actors.txt  block  block_analysis  curl  epoch.txt  event-comparison.rs  events.dot  events.txt  events2.dot  light client.rs  plan.txt  timing.rs  todo.txt
node/src/: chain_spec.rs  node_operator_cardano_nfts.json
pallets/audit-trail/: Cargo.toml
pallets/chain-listener/: Cargo.toml
pallets/chain-listener/src/: lib.rs  tests.rs
pallets/dispute-mechanism/: Cargo.toml
pallets/governance/: Cargo.toml
pallets/light-clients/: Cargo.toml
pallets/machine-learning/: Cargo.toml
pallets/machine-learning/src/: lib.rs
pallets/machine-learning/src/python/: anomaly_detection.py  federated_learning.py  htms.py  main_ml.py.py
pallets/oracle/: Cargo.toml
pallets/oracle/src/: ml_interface.rs
pallets/pallet-epoch/src/: lib.rs  mock.rs
pallets/pallet-registration/: Cargo.toml  mock.rs
pallets/pallet-registration/src/: lib.rs  limits.rs  tests.rs  types.rs
pallets/reward-slashing/: Cargo.toml
pallets/substrate-validator-set/: Cargo.toml
pallets/substrate-validator-set/src/: lib.rs  payment.xsk  payment.xvk  phrase.prv  root.xsk  tests.rs
pallets/vrf/: Cargo.toml
runtime/: Cargo.toml  rustc-ice-2024-07-09T12_52_40-2502615.txt  rustc-ice-2024-07-09T12_53_41-2503791.txt  rustc-ice-2024-07-09T13_10_01-2554262.txt  rustc-ice-2024-07-09T13_13_24-2557673.txt
runtime/src/: lib.rs
tests/: package-lock.json  package.json  test.js  test.py
tests/old/: package-lock.json  package.json  test.py  test1.js  test2.py  test_transaction.js
