[package]
name = "pallet-oracle"
version = "0.1.0"
edition = "2021"
authors = ["Sylvain Cormier sylvaincormier@protonmail.com"]
description = "Audit trail pallet for the decentralized oracle system"

[dependencies]
frame-support = { workspace = true }
frame-system = { workspace = true }
scale-info = { workspace = true, features = ["derive"] }
sp-std = { workspace = true }
pyo3 = { version = "0.15", features = ["extension-module"] }
[features]
default = ["std"]
std = [
    "frame-support/std",
    "frame-system/std",
    "scale-info/std",
    "sp-std/std",
]