[package]
name = 'pallet-registration'
version = '1.1.0'
authors = ['Sylvain Cormier <sylvaincormier@webisoft.com>']
description = "Register a node to the network"
edition = '2021'
repository = 'https://github.com/worldmobilegroup/aya-node'
license = 'Apache-2.0'

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
sp-core = { workspace = true, default-features = false, features = ['std'] }
sp-io = { workspace = true, default-features = false, features = ['std'] }
sp-runtime = { workspace = true, default-features = false, features = ['std'] }
frame-benchmarking = { workspace = true, default-features = false, features = ['std'] }
frame-support = { workspace = true, default-features = false, features = ['std'] }
frame-system = { workspace = true, default-features = false, features = ['std'] }
scale-info = { workspace = true, default-features = false, features = ['std'] }
log = { workspace = true, default-features = false, features = ['std'] }
scale-codec = { workspace = true, default-features = false, features = ['std'] }
sp-consensus-aura = { workspace = true, default-features = false, features = ['std'] }
sp-std = { workspace = true, default-features = false, features = ['std'] }
serde = { workspace = true, default-features = false, features = ['std'] }
serde_json = { workspace = true, default-features = false, features = ['std'] }
pallet-session = { workspace = true, default-features = false, features = ['std'] }
sp-application-crypto = { workspace = true, default-features = false, features = ['std'] }
substrate-validator-set = { workspace = true, default-features = false, features = ['std'] }
pallet-im-online = { workspace = true, default-features = false, features = ['std'] }
sp-consensus-grandpa = { workspace = true, default-features = false, features = ['std'] }
hex-literal = { workspace = true, default-features = false }    
sp-keystore = { workspace = true, default-features = false, features = ['std'] }
[dev-dependencies]
sp-core = { workspace = true, default-features = false, features = ['std'] }
sp-consensus-aura = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.9.0", default-features = false }
mockall = "0.12.1" 
sp-keystore = { workspace = true, default-features = false, features = ['std'] }
[features]
default = ["std"]
std = [
    "scale-codec/std",
    "frame-benchmarking/std",
    "frame-support/std",
    "frame-system/std",
    "scale-info/std",
    "sp-core/std",
    "sp-io/std",
    "sp-runtime/std",
    "sp-std/std",
    "serde/std",
    "serde_json/std",
    "sp-application-crypto/std",
]

runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "sp-runtime/runtime-benchmarks",
]

try-runtime = [
    "frame-support/try-runtime",
    "frame-system/try-runtime",
    "sp-runtime/try-runtime",
]
