[package]
name = 'pallet-vrf'
version = '1.1.0'
authors = ['Gautam Dhameja <quasijatt@outlook.com>']
edition = '2021'
license = 'Apache-2.0'
repository = 'https://github.com/gautamdhameja/substrate-validator-set'

[dependencies]
sp-core = { workspace = true, default-features = false }
sp-io = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }
sp-staking = { workspace = true, default-features = false }
frame-benchmarking = { workspace = true, default-features = false, optional = true }
frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }
pallet-session = { workspace = true, default-features = false }
sp-weights = { workspace = true, default-features = false }
scale-info = { workspace = true, default-features = false, features = ["derive"] }
log = { workspace = true, default-features = false }
scale-codec = { workspace = true, default-features = false, features = ["derive"] }


[dev-dependencies]
sp-state-machine = { workspace = true, default-features = false }
serde = { workspace = true }
[features]
default = ['std']
std = [
    'scale-codec/std',
    'frame-benchmarking?/std',
    'frame-support/std',
    'frame-system/std',
    'scale-info/std',
    'sp-core/std',
    'sp-io/std',
    'sp-std/std',
    'sp-runtime/std',
    'sp-staking/std',
    'pallet-session/std',
    'log/std',
    # 'cardano-serialization-lib/std',
]
runtime-benchmarks = ['frame-benchmarking/runtime-benchmarks']
try-runtime = ['frame-support/try-runtime']